--- a/src/main/webapp/static/typography.css
+++ b/src/main/webapp/static/typography.css
@@ -58,3 +58,43 @@ text-decoration: none;
 a:hover { text-decoration: none; }
 p#action-bar a { color: #ffffff; }
 p#action-bar a:hover { color: #6eb9cc; text-decoration: none; }
+a#account{
+    color: #93FFE8;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+}
+p#welcome {
+    color: #ffd700;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+}
+p#err1{
+    color: #ffd700;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 80px;
+    padding-left: 300px;
+}
+p#err2{
+    color: #ffd700;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 60px;
+    padding-left: 300px;
+}
+p#err3{
+    color: #ffd700;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    padding-left: 300px;
+}
+p#err4{
+    color: #ffd700;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    padding-left: 300px;
+}
+p#err5{
+    color: #ffd700;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    padding-left: 300px;
+}
