--- a/src/main/webapp/static/typography.css
+++ b/src/main/webapp/static/typography.css
@@ -1,14 +1,15 @@
 h1 {
 color: #f0ebeb;
-font-family: "Myriad Pro", Helvetica, Arial, sans-serif;
-font-size: 48px;
+font-family: 'Mistral', arial, sans-serif;
+font-size: 58px;
 font-weight: normal;
 }
 h1 a { color: #f0ebeb; text-decoration: none; }
 h2 {
-color: #fcf9f9;
-font-family: "Myriad Pro", Helvetica, Arial, sans-serif;
+color: #fcf945;
+font-family: 'Mistral', arial, sans-serif;
 font-size: 48px;
+text-shadow: 4px 4px 4px #aaa;
 letter-spacing: 2px;
 
 }
@@ -45,7 +46,7 @@ p#yes{
 p {
 color: #525252;
 font-family: Arial, Helvetica, sans-serif;
-font-size: 12px;
+font-size: 16px;
 }
 p.meta { color: #707070; font-size: 10px; text-align: right; }
 p#footer-text { text-align: center; }
@@ -53,7 +54,8 @@ div#message p { color: #4d4d4d; line-height: 20px; }
 /* Link styling */
 a { 
 color: #999999; 
-text-decoration: none; 
+text-decoration: none;
+
 }
 a:hover { text-decoration: none; }
 p#action-bar a { color: #ffffff; }
@@ -61,12 +63,12 @@ p#action-bar a:hover { color: #6eb9cc; text-decoration: none; }
 a#account{
     color: #93FFE8;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
+    font-size: 16px;
 }
 p#welcome {
     color: #ffd700;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
+    font-size: 16px;
 }
 p#err1{
     color: #ffd700;
@@ -98,3 +100,4 @@ p#err5{
     font-size: 14px;
     padding-left: 300px;
 }
+
