--- a/src/main/webapp/static/style.css
+++ b/src/main/webapp/static/style.css
@@ -1,3 +1,6 @@
+
+@import url(typography.css);
+
 body {
     background-color: #f8f8f8;
     margin: auto;
@@ -302,4 +305,16 @@ label#usernamelabel{
 }
 label#passwordlabel{
     float: right;
+}
+a#accordion{
+    font-family: 'Mistral', arial,sans-serif;
+    font-size: 38px;
+    color:  #328FF4;
+    text-shadow: 4px 4px 4px #aaa;
+}
+a#accordion1{
+    font-family: 'Mistral', arial,sans-serif;
+    font-size: 38px;
+    color:  #328FF4;
+    text-shadow: 4px 4px 4px #aaa;
 }
