language select add

--- a/src/main/webapp/static/style.css
+++ b/src/main/webapp/static/style.css
@@ -95,7 +95,7 @@ form#searchform input[type="password"] {
 a#account{
     float: right;
     padding-top: 7px;
-    width: 350px;
+    width: 300px;
     font-size: 15pt;
 }
 
@@ -204,7 +204,7 @@ div#roomAdminGeneral{
     height: 100%;
 }
 div#accordion2{
-    width: 70%;
+    width: 80%;
     margin-left: 230px;
 
 }
@@ -317,4 +317,26 @@ a#accordion1{
     font-size: 38px;
     color:  #328FF4;
     text-shadow: 4px 4px 4px #aaa;
+}
+div#language{
+    float: right;
+   padding-top: 220px;
+   padding-right: 0px;
+    height: 0;
+}
+select#lang{
+    float: left;
+    width: 100px;
+    height: 30px;
+}
+button#langBtn{
+    width: 120px;
+    height: 30px;
+}
+div#presentation{
+    width: 1600px;
+    height: 120px;
+    margin: auto;
+    background: url("background2.jpg") repeat-x;
+
 }
